NEWS in CEM version 1.1.30
* changed package maintainer info
* fixed if(class(obj)==string)

NEWS in CEM version 1.1.29
* fixed vignette formatting
* fixed \url vs \doi in man pages

NEWS in CEM version 1.1.27
* added this NEWS file
* fixed Authors@R field adding Richard Nielesen in DESCRIPTION
* added references to Shimazaki and Shinomoto (2007) in cem.Rd
* correct attribution of code and refereces in nclass.ss.R
* changed authors affiliations in the vignette cem.Rnw
* changed everywhere in .Rd files the references section
* replaced \dontrun with \donttest when examples takes long to run
* removed all <<- entries in R code
* fixed xlab label and values in spacegraph when no scaling occurs
  in explore=FALSE mode
* fixed par() restoring on exit from relax.plot.R  
* fixed options() changes on finishing on the vignette inst/doc/cem.R[nw]
* captured error in man page with random selection of data that
  prevented test to pass
* fixed control for cat() statements through the verbose argument to 
  functions
* fingers crossed for CRAN approval